@@ -1,0 +1,39 @@
+# Sample .travis.yml for R projects.
+#
+# See https://github.com/craigcitro/r-travis
+#     https://github.com/eddelbuettel/r-travis/
+
+language: c
+
+sudo: required
+
+dist: trusty
+
+env:
+  global:
+    - R_BUILD_ARGS="--no-build-vignettes --no-manual"
+    - R_CHECK_ARGS="--no-build-vignettes --no-manual --as-cran"
+
+before_install:
+  - curl -OL http://raw.github.com/craigcitro/r-travis/master/scripts/travis-tool.sh
+  - chmod 755 ./travis-tool.sh
+  - ./travis-tool.sh bootstrap
+  - sudo add-apt-repository -y ppa:edd/misc
+  - sudo apt-get update -q
+
+install:
+  - ./travis-tool.sh install_aptget r-cran-rcpp r-cran-rcpparmadillo r-cran-rcppoctave r-cran-xts r-cran-expm
+
+script: 
+  - ./travis-tool.sh run_tests
+
+after_failure:
+  - ./travis-tool.sh dump_logs
+
+notifications:
+  email:
+    on_success: change
+    on_failure: change
+
+    
+
