@@ -1,3 +1,7 @@
+2015-12-21  Dirk Eddelbuettel  <edd@debian.org>
+
+	* .travis.yml: Added for Travis Continuous Integration 
+
 2015-12-20  Dirk Eddelbuettel  <edd@debian.org>
 
 	* src/tfsmooth.cpp: Added roxygen code for manual page
